--- a/src/e_cidadania/templates/userprofile/profile/delete.html
+++ b/src/e_cidadania/templates/userprofile/profile/delete.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <div id="contenttitles">{% trans "Remove profile" %}</div>
-        <div id="forms" style="margin-left: 20px;">
+        <div id="contentinside">
             <p>{% trans "It erases all your private data except your username. You can refill the information later if you want to." %}</p>
             
             <form action="" method="post" enctype="multipart/form-data">
