--- a/src/e_cidadania/templates/userprofile/profile/personal.html
+++ b/src/e_cidadania/templates/userprofile/profile/personal.html
@@ -4,14 +4,15 @@
 {% block title %}{% trans "Edit your personal information" %}{% endblock %}
 
 {% block content %}
-    <form class="personal" action="{{ request.path_info }}" method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-	    <fieldset>
-	        <div id="contenttitles">{% trans "Edit your personal information" %}</div>
-	            <div id="forms" style="margin-left: 20px;">
-	                {{ form.as_p }}
-	            </div>
-	    </fieldset>
-        <input type="submit" value="{% trans 'Save' %}" />
-	</form>
+    <div id="contenttitles">{% trans "Edit your personal information" %}</div>
+	    <div id="contentinside">
+	        <form action="{{ request.path_info }}" method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                <table id="personal">
+                {{ form.as_table }}
+                </table>
+	            
+	            <input type="submit" value="{% trans 'Save' %}" />
+	        </form>
+	    </div>
 {% endblock %}
