--- a/src/e_cidadania/templates/userprofile/avatar/choose.html
+++ b/src/e_cidadania/templates/userprofile/avatar/choose.html
@@ -4,14 +4,13 @@
 {% block title %}{% trans "Choose the location of your avatar" %}{% endblock %}
 {% block robots %}noindex,nofollow{% endblock %}
 
-{% block extrajs %}
 <script type="text/javascript">
 	$(function() {
 	//avatar
 		$("a.delavatar").click(function() {
 			$.getJSON($(this).attr("href"), function(data) {
 				if (data.success) {
-					$("img#avatarimg").attr("src", "{{ generic96 }}");
+					$("img#avatarimg").attr("src", "/{{ generic96 }}");
 					$("p#avatardelete").remove();
 				}
 			});
@@ -19,7 +18,6 @@
 		});
 	});
 </script>
-{% endblock %}
 
 {% block content %}
 	<form action="" method="post" accept-charset="utf-8" enctype="multipart/form-data">
@@ -30,6 +28,16 @@
 			{% endfor %}
 		{% endif %}
 		<fieldset>
+		    {% load avatars %}
+            <div class="center">
+		    <img class="border" id="avatarimg" src="{% avatar 96 %}" />
+            {% if user.get_profile.has_avatar %}
+                <p id="avatardelete" style="text-align: center;">
+                    <a href="{{ request.path_info }}delete/" class="delavatar">{% trans "Delete" %}</a>
+                </p>
+            {% endif %}
+	        </div>
+			
 			<legend>{% trans "Choose the location of your avatar" %}</legend>
 			<ul>
 			<li>
@@ -60,9 +68,4 @@
 		<p>{% trans "You have several options to select the image you want as avatar on your profile" %}.</p>
   </div>
 
-	{% load avatars %}
-  <div class="center">
-		<img class="border" id="avatarimg" src="{% avatar 96 %}" />
-    {% if user.get_profile.has_avatar %}<p id="avatardelete" style="text-align: center;"><a href="{{ request.path_info }}delete/" class="delavatar">{% trans "Delete" %}</a></p>{% endif %}
-	</div>
 {% endblock %}
