--- a/src/e_cidadania/templates/userprofile/profile/personal_done.html
+++ b/src/e_cidadania/templates/userprofile/profile/personal_done.html
@@ -1,22 +1,15 @@
-{% extends "base_2col.html" %}
+{% extends "base.html" %}
 {% load i18n %}
 
 {% block title %}{% blocktrans %}{{ user }}'s Dashboard{% endblocktrans %}{% endblock %}
 {% block robots %}noindex,nofollow{% endblock %}
 
-{% block nav-main %}
-{% include "userprofile/menu.html" %}
-{% endblock %}
-
 {% block content %}
-	<p class="success large">
-		{% trans "Your profile information has been updated successfully" %}.
-	</p>
-{% endblock %}
-
-{% block content-related %}
-  <div class="box">
-    <h3>{% trans "Personal information" %}</h3>
-    <p>{% trans "Insert some information about you" %}.</p>
-  </div>
+	<div id="contentinside">
+		{% trans "Your profile information has been updated successfully" %}</br></br>
+		<div>
+		    <a href="/">&laquo; {% trans "Back to home" %}</a></br>
+	        <a href="/accounts/profile">&laquo; {% trans "Back to your profile" %}</a>
+	    </div>
+	</div>
 {% endblock %}
