Added proposals views "add" and "list". The templates were also created

--- a/src/e_cidadania/templates/proposals/list_proposals.html
+++ b/src/e_cidadania/templates/proposals/list_proposals.html
@@ -14,4 +14,5 @@
         <div class="creator">{% trans "proposed by " %}{{ proposal.author }}</div>
       </div>
     </div>
+   {% endfor %}
 {% endblock %}
