--- a/src/e_cidadania/templates/proposals/add_proposal.html
+++ b/src/e_cidadania/templates/proposals/add_proposal.html
@@ -4,4 +4,8 @@
 {% block title %}{% trans "Add proposal" %}{% endblock %}
 
 {% block content %}
+    <form action="" method="post">{% csrf_token %}
+        {{ form.as_p }}    
+        <p><input type="submit" value="Continue &rarr;" /></p>
+    </form>
 {% endblock %}
