--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -83,6 +83,7 @@
 	        <p>15703 Santiago de Compostela</p>
 	        <p>t: +34 981 589 269 | f: +34 981 554 751</p> 
 	    {% endblock %}
+	        <p>(c) 2010 <a href="http://trac.cidadania.coop">e-cidadania</a> creado por <a href="http://www.cidadania.coop">Cooperativa Cidadania</a></p>
 	    </div>
 	</body>
 </html>
