--- a/src/e_cidadania/templates/spaces/index.html
+++ b/src/e_cidadania/templates/spaces/index.html
@@ -38,5 +38,5 @@
 {% endblock %}
 
 {% block footer %}
-  <p>Entidades que participan:</p> {% for e in entities %} {% if e|last%} {{ e.name }} {% else %} {{e.name}} | {% endif%} {% endfor %}
+  <p>Entidades que participan:</p> {% for e in entities %} {{e.name}} | {% endfor %}
 {% endblock %}
