Added new logotype

--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -72,18 +72,15 @@
 	    </div>
 	    <div id="footer">
 	    {% block footer %}
-	    	  <p>(c) 2010 Cidadanía Coop. e-cidadania é unha ferramenta libre.</p>
 	        <p><a href="http://www.djangoproject.com">django</a> | 
 	           <a href="http://www.python.org">python</a> | 
 	           <a href="http://www.w3.org">xhtml</a> | 
 	           <a href="http://www.w3.org">css</a> | 
 	           <a href="http://www.w3.org">xml</a>
 	        </p>
-	        <p>Corredoira das Fraguas, 5, 1º I.</p>
-	        <p>15703 Santiago de Compostela</p>
-	        <p>t: +34 981 589 269 | f: +34 981 554 751</p> 
 	    {% endblock %}
 	        <p>(c) 2010 <a href="http://trac.cidadania.coop">e-cidadania</a> creado por <a href="http://www.cidadania.coop">Cooperativa Cidadania</a></p>
+	        <p>100% organic hand-coded platform</p>
 	    </div>
 	</body>
 </html>
