--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -3,13 +3,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="es-ES" xml:lang="es-ES">
 	<head>
 		<title>{% block title %}Title{% endblock %}</title>
-		<link rel="stylesheet" type="text/css" media="screen" href="/static/css/screen.css"/>
-		<link rel="shortcut icon" href="/static/assets/favicon.ico" type="image/ico"/>
+		<link rel="stylesheet" type="text/css" media="screen" href="/{{ MEDIA_URL }}css/screen.css"/>
+		<link rel="shortcut icon" href="/{{ MEDIA_URL }}assets/favicon.ico" type="image/ico"/>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 		<meta name="Description" content="Site description"/>
 		<meta name="Robots" content="all"/>
-		<script src="/static/js/jquery.js" type="text/javascript"></script>
-		<script src="/static/js/dropdown.js" type="text/javascript"></script>
+		<script src="/{{ MEDIA_URL }}static/js/jquery.js" type="text/javascript"></script>
+  	<script src="/{{ MEDIA_URL }}static/js/jquery-ui.js" type="text/javascript"></script>
+		<script src="/{{ MEDIA_URL }}js/dropdown.js" type="text/javascript"></script>
 	</head>
 	<body>
 	    <div id="topbar">
