--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -8,8 +8,8 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 		<meta name="Description" content="Site description"/>
 		<meta name="Robots" content="all"/>
-		<script src="/{{ MEDIA_URL }}static/js/jquery.js" type="text/javascript"></script>
-  	<script src="/{{ MEDIA_URL }}static/js/jquery-ui.js" type="text/javascript"></script>
+		<script src="/{{ MEDIA_URL }}js/jquery.js" type="text/javascript"></script>
+  	<script src="/{{ MEDIA_URL }}js/jquery-ui.js" type="text/javascript"></script>
 		<script src="/{{ MEDIA_URL }}js/dropdown.js" type="text/javascript"></script>
 	</head>
 	<body>
