Added new fields to the news model. Modified base template and site_index. Created url for static index

--- a/src/e_cidadania/templates/site_index.html
+++ b/src/e_cidadania/templates/site_index.html
@@ -1,9 +1,18 @@
 {% extends "base.html" %}
 {% load i18n %}
 
-{% block title %}E-Cidadania - Portal de usuarios{% endblock %}
+{% block title %}{% trans "E-Cidadania Index" %}{% endblock %}
 
 {% block content %}
+
+{% block leftcol %}
+{% endblock %}
+
+{% block centercol %}
+{% endblock %}
+
+{% block rightcol%}
+{% endblock %}
 
 {% endblock %}
 
