--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="es-ES" xml:lang="es-ES">
 	<head>
-		<title>{% block title %}Title{% endblock %}</title>
+		<title>{% block title %}{% endblock %}</title>
 		<link rel="stylesheet" type="text/css" media="screen" href="/{{ MEDIA_URL }}css/screen.css"/>
 		<link rel="shortcut icon" href="/{{ MEDIA_URL }}assets/favicon.ico" type="image/ico"/>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -13,75 +13,79 @@
 		<script src="/{{ MEDIA_URL }}js/dropdown.js" type="text/javascript"></script>
 	</head>
 	<body>
-	    <div id="topbar">
+	  <div id="topbar">
 	    <div id="userbar">
-	        {% if user.is_authenticated %}
-	            <ul class="topnav">  
-                    <li><a href="/accounts/messages">{% trans "Messages" %}</a> | </li>  
-                    <li><a href="/none">{% trans "Language" %}</a>| </li>
-                    <li>
-                        <a href="/accounts/profile">
-	                    {% if user.get_profile.firstname %}
-	                    {{ user.get_profile.firstname }} {{ user.get_profile.surname }}
-	                    {% else %}
-	                    {{ user.username }}
-	                    {% endif %}
-	                    </a>
-	                    <ul class="subnav">
-	                        {% if user.is_staff %}
-	                        <li><a href="/admin">{% trans "Administration" %}</a></li>
-	                        {% endif %}
-	                        <li><a href="/accounts/profile/edit/personal">{% trans "Edit profile" %}</li>
-	                        <li><a href="/accounts/logout">{% trans "Logout" %}</a></li>
-	                    </ul>
-	                </li>
+	      {% if user.is_authenticated %}
+	        <ul class="topnav">
+	          <li><a href="/accounts/messages">{% trans "Messages" %}</a> | </li>  
+            <li><a href="/none">{% trans "Language" %}</a>| </li>
+            <li>
+              <a href="/accounts/profile">
+                {% if user.get_profile.firstname %}
+                  {{ user.get_profile.firstname }} {{ user.get_profile.surname }}
+	              {% else %}
+	                {{ user.username }}
+	              {% endif %}
+	            </a>
+	            <ul class="subnav">
+	              {% if user.is_staff %}
+	                <li><a href="/admin">{% trans "Administration" %}</a></li>
+	              {% endif %}
+	              <li><a href="/accounts/profile/edit/personal">{% trans "Edit profile" %}</li>
+	              <li><a href="/accounts/logout">{% trans "Logout" %}</a></li>
 	            </ul>
-            {% else %}
-                <ul class="topnav">
-                    <li><a href="/accounts/login">{% trans "Login" %}</a> | </li>
-                    <li><a href="/none">{% trans "Language" %}</a></li>
-	            </ul>
-	        {% endif %}
+	          </li>
+	        </ul>
+        {% else %}
+          <ul class="topnav">
+            <li><a href="/accounts/login">{% trans "Login" %}</a> | </li>
+            <li><a href="/none">{% trans "Language" %}</a></li>
+	        </ul>
+	      {% endif %}
 	    </div>
-	    </div>
-	    <div id="header">
+	  </div>
+
+	  <div id="header">
 	    {% block header %}
-	            <div id="logo">
-	            {% block logo %}
-	            {% endblock %}
-	            </div>
-	            <div id="banner">
-	            {% block banner %}
-	            {% endblock %}
-	            </div>
-	    {% endblock %}
-	    </div>
 	    
-	    <div id="content">
-	        {% block content %}
-	        
-	        	      {% block leftcol %}
-	                {% endblock %}
-	                
-	                {% block centercol %}
-	                {% endblock %}
-	                
-	          	    {% block rightcol %}
-	                {% endblock %}
-	                
+	      <div id="logo">
+	        {% block logo %}
 	        {% endblock %}
-	    </div>
-	    <div id="footer">
-	    {% block footer %}
-	        <p><a href="http://www.djangoproject.com">django</a> | 
-	           <a href="http://www.python.org">python</a> | 
-	           <a href="http://www.w3.org">xhtml</a> | 
-	           <a href="http://www.w3.org">css</a> | 
-	           <a href="http://www.w3.org">xml</a>
-	        </p>
+	      </div>
+
+	      <div id="banner">
+	        {% block banner %}
+	        {% endblock %}
+	      </div>
 	    {% endblock %}
-	        <p>(c) 2010 <a href="http://trac.cidadania.coop">e-cidadania</a> creado por <a href="http://www.cidadania.coop">Cooperativa Cidadania</a></p>
-	        <p>100% organic hand-coded platform</p>
-	    </div>
+	  </div>
+	    
+	  <div id="content">
+	    {% block content %}
+      
+        {% block leftcol %}
+	      {% endblock %}
+           
+        {% block centercol %}
+        {% endblock %}
+	                
+   	    {% block rightcol %}
+        {% endblock %}
+	                
+      {% endblock %}
+    </div>
+
+    <div id="footer">
+	    {% block footer %}
+        <p><a href="http://www.djangoproject.com">django</a> | 
+           <a href="http://www.python.org">python</a> | 
+           <a href="http://www.w3.org">xhtml</a> | 
+           <a href="http://www.w3.org">css</a> | 
+           <a href="http://www.w3.org">xml</a>
+        </p>
+	    {% endblock %}
+        <p>(c) 2010 <a href="http://trac.cidadania.coop">e-cidadania</a> creado por <a href="http://www.cidadania.coop">Cooperativa Cidadania</a></p>
+        <p>100% organic hand-coded platform</p>
+    </div>
 	</body>
 </html>
