--- a/src/e_cidadania/templates/site_index.html
+++ b/src/e_cidadania/templates/site_index.html
@@ -10,10 +10,10 @@
 
 {% block centercol %}
 
-  {% for news in post %}
-    <h1>{{ publication.post_title }}</h1>
-    <p>{{ publication.post_message }}</p>
-    <p>{% trans "Written by" %} {{ publication.post_author }} 
+  {% for news in publication %}
+    <h1>{{ news.post_title }}</h1>
+    <p>{{ news.post_message }}</p>
+    <p>{% trans "Written by" %} {{ news.post_author }} 
   {% endfor%}
 
 {% endblock %}
