--- a/src/e_cidadania/templates/site_index.html
+++ b/src/e_cidadania/templates/site_index.html
@@ -11,6 +11,9 @@
     <span>----</span>
     <p>¿Qué puedes hacer con e-cidadania? <strong>Descúbrelo</strong></p>
     <span>----</span>
+    <p>Lista de espacios</p>
+    <span>----</span>
+    <p>Espacios modificados recientemente</p>
   </div>
 {% endblock %}
 
@@ -27,6 +30,13 @@
 {% endblock %}
 
 {% block rightcol%}
+  <div id="rightcol">
+    <p>¡Conectate a través de Facebook, Twitter, RSS, o lo que quieras!</p>
+    <span>----</span>
+    <p>Desarrollo de e-cidadania</p>
+    <p>¿Quieres echarnos una mano? Accede</p>
+    <span>----</span>
+  </div>
 {% endblock %}
 
 {% endblock %}
