--- a/src/e_cidadania/static/css/screen.css
+++ b/src/e_cidadania/static/css/screen.css
@@ -1,9 +1,9 @@
 /*
     Copyright (c) 2010 Cidadanía Coop.
     Written by: Oscar Carballal Prego <info@oscarcp.com>
-    
+
     This file is part of the e-cidadania.
-    
+
     Distributed under terms of the GPLv3 license.
 */
 
@@ -68,7 +68,7 @@ body {
 	background: #FFF;
 	padding: 0;
 	margin: 0;
-	font-family: Verdana;
+	font-family: Verdana, "Lucida Sans";
 	font-size: 12px;
 	color: #000;
 	cursor: default;
@@ -96,7 +96,7 @@ input[type="text"], input[type="password"] {
     border: 1px solid #666;
     background: #FFF;
     padding: 2px;
-    
+
     /* Fancy round borders for Webkit, Gecko and standard
        implementations */
     border-radius: 4px;
@@ -127,7 +127,7 @@ input[type="text"], input[type="password"] {
     font-size: 11px;
     color: #FFF;
     background: url(../assets/userbar.png) #000 repeat;
-    
+
     /* Fancy round borders for Webkit, Gecko and standard
        implementations */
     border-bottom-left-radius: 7px;
@@ -191,13 +191,13 @@ form table { width: 100% }
 .calendar td, .calendar th { min-width: 10em; width: 10em; }
 .month-view td { vertical-align: top; height: 10em; min-height: 10em; }
     .month-view td, .month-view th { min-width: 10em; width: 10em; }
-    .month-view .day-ordinal { font-weight: bold; font-size: 1.1em; 
+    .month-view .day-ordinal { font-weight: bold; font-size: 1.1em;
         text-align: right; }
     .month-view ul { list-style: none; margin: 1px 2px; padding: 0; }
     .month-view .today { background-color: #eed; }
 .month-divider th, .month-divider td { border-top: 3px double #888; }
 #belts { list-style-type: none; }
-    #belts a { text-align: center; display: block; padding: 4px; width: 70%; 
+    #belts a { text-align: center; display: block; padding: 4px; width: 70%;
         border: 1px solid #ccc; margin-bottom: .5em; font-weight: bold; }
         #belts a:hover { font-style: italic; }
 #white-belt { background-color: #fff; color: #322; }
@@ -372,7 +372,7 @@ table#personal th {
     float: right;
     width: 45%;
     padding: 20px 30px 0px 10px;
-    margin-right: 25px; 
+    margin-right: 25px;
 }
 
 #loginblock {
@@ -418,11 +418,11 @@ table#personal th {
 #proposal .title {
     font-weight: bold;
     font-size: 14px;
-    
+
 }
 
 #proposal .resume {
-    
+
 }
 
 #proposal .creator {
@@ -478,9 +478,10 @@ table#personal th {
 }
 
 #footer a {
-    color: #DDD; 
+    color: #DDD;
 }
 
 #footer a:hover, #footer a:visited {
     color: #666;
 }
+
