Minor changes to the main index page. Added documents administration

--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -60,8 +60,8 @@
            <a href="http://www.w3.org">xml</a>
         </p>
 	    {% endblock %}
-        <p>(c) 2010 <a href="http://trac.cidadania.coop">e-cidadania</a> creado por <a href="http://www.cidadania.coop">Cooperativa Cidadania</a></p>
-        <p>100% organic hand-coded platform</p>
+        <p>(c) 2010 <a href="http://trac.cidadania.coop">e-cidadania</a> creado por <a href="http://www.cidadania.coop">Cidadania Rede de Aplicacións Sociais</a></p>
+        <p>100% organic hand-coded software</p>
     </div>
 	</body>
 </html>
