--- a/src/e_cidadania/templates/site_index.html
+++ b/src/e_cidadania/templates/site_index.html
@@ -2,6 +2,14 @@
 {% load i18n %}
 
 {% block title %}{% trans "E-Cidadania Index" %}{% endblock %}
+{% block logo %}<a href="/"><img src="/{{ MEDIA_URL }}spaces/logos/logo_index.png"/></a>{% endblock %}
+{% block banner %}<img src="/{{ MEDIA_URL }}spaces/banners/banner_index.png"/>{% endblock %}
+
+{% block menubar %}
+  <ul>
+    <li>tururu</li>
+  </ul>
+{% endblock %}
 
 {% block content %}
 
