--- a/src/e_cidadania/static/css/screen.css
+++ b/src/e_cidadania/static/css/screen.css
@@ -146,6 +146,18 @@ input[type="text"], input[type="password"] {
     color: #AAA;
 }
 
+#menubar {
+    margin: 5px;
+    height: 20px;
+}
+
+#menubar li {
+    border: 1px solid #000;
+    padding: 5px;
+    font-size: 1em;
+    float: right;
+}
+
 #leftcol {
     float: left;
     padding: 10px;
