--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -24,13 +24,16 @@
 
 	      <div id="logo">
 	        {% block logo %}
-	          <a href="/"><img src="/{{ MEDIA_URL }}spaces/logos/logo_index.png"/></a>
 	        {% endblock %}
 	      </div>
 
 	      <div id="banner">
 	        {% block banner %}
-	          <img src="/{{ MEDIA_URL }}spaces/banners/banner_index.png"/>
+	        {% endblock %}
+	      </div>
+	      
+	      <div id="menubar">
+	        {% block menubar %}
 	        {% endblock %}
 	      </div>
 	    {% endblock %}
